hphp/hack/test/typecheck/tconst_unsoundness.php.like_types.exp
File "tconst_unsoundness.php", line 15, characters 5-6:
Invalid argument (Typing[4062])
File "tconst_unsoundness.php", line 12, characters 48-49:
You are trying to access the property 'Ta' but this is a dynamic value
File "tconst_unsoundness.php", line 14, characters 32-34:
Definition is here
